# caraint

./: .gitignore  Cargo.toml  LICENSE  README.md  test.cara  test.py
src/: ast.rs  lib.rs  main.rs
src/back/: builtins.rs  mod.rs  result.rs  scope.rs  value.rs
src/backend/: builtins.rs  mod.rs  result.rs  scope.rs  value.rs
src/front/: lexer.rs  parser.rs
src/frontend/: lexer.rs  parser.rs
