[package]
name = "cara"
version = "0.6.0"
edition = "2021"

[dependencies]
spin = "0.9.8"

[dependencies.snmalloc-rs]
version = "0.3.6"
features = ["native-cpu"]

[dependencies.dashu-int]
version = "0.4.1"
default-features = false

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1
