[package]
name = "cara"
version = "0.6.0"
edition = "2024"

[dependencies]
spin = "0.9.8"

[dependencies.dashu-int]
version = "0.4.1"
default-features = false

[dependencies.snmalloc-rs]
version = "0.3.7"
optional = true

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[features]
default = ["snmalloc"]
snmalloc = ["dep:snmalloc-rs"]
