[package]
name = "cara"
version = "0.6.0"
edition = "2024"

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[features]
default = ["snmalloc"]
snmalloc = ["dep:snmalloc-rs"]

[dependencies]
getopts-macro = "0.1.3"

[dependencies.dashu-int]
version = "0.4.1"
default-features = false

[dependencies.snmalloc-rs]
version = "0.3.8"
optional = true
